syntax = "proto3";

package proto;
import "google/api/annotations.proto";

option go_package = ".;pb";

message GetUserWithIDRequest {
  string user_id = 1;
}

message UserInformation {
  string user_id = 1;
  string user_name = 2;
}

message GetUserWithIDResponse{
  bool error =  1;
  oneof data{
    UserInformation user = 2;
    string msg = 3;
  } 
}
message CreateUserRequest{
  string user_name = 1;
  string clientID = 2;
}

message CreateUserResponse{
  bool error = 1;
  oneof data{
    UserInformation user = 2;
    string msg = 3;
  }
}

message GetUsesrRequest {

}
message GetUsersRepsonse{
  bool error = 1;
  string msg = 2;
  repeated UserInformation users = 3;
}

service UserService {
  rpc GetUsers(GetUsesrRequest) returns (GetUsersRepsonse){
    option (google.api.http) = {
      get: "/api/v1/user"
    };
  };
  rpc GetUserWithID(GetUserWithIDRequest) returns (GetUserWithIDResponse) {
    option (google.api.http) = {
      get:"/api/v1/userid"
    };
  };
  rpc CreateUser(CreateUserRequest) returns(CreateUserResponse){
    option (google.api.http) = {
      post: "/api/v1/user"
      body: "*"
    };
  };
}
